Fixed text inside of drop-down bar not aligning with first button - change made to _navbar.scss increasing the left property to -45px

--- a/SCSS/components/_navbar.scss
+++ b/SCSS/components/_navbar.scss
@@ -91,7 +91,7 @@
                     justify-content: space-between;
                     float: left;
                     position: absolute;
-                    left: -15px;
+                    left: -45px;
                     // ====================================================================================
                     & >li{
                         display:block;
