--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -101,7 +101,7 @@
           justify-content: space-between;
   float: left;
   position: absolute;
-  left: -15px;
+  left: -45px;
 }
 
 .navigation-bar > .tab-wrapper > .bar-child > .drop-down > ul > li {
